Hello World/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Hello World
  labels:
    app: Hello World
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: Hello World
